--- a/msvc/hl2/game_server_hl1mp/game_server_hl1mp.vcxproj.filters
+++ b/msvc/hl2/game_server_hl1mp/game_server_hl1mp.vcxproj.filters
@@ -915,9 +915,6 @@
     <ClCompile Include="..\..\..\game\server\rope.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\server\saverestore_gamedll.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\server\sceneentity.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1207,12 +1204,6 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\querycache.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\rope_helpers.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\saverestore.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\SceneCache.cpp">
@@ -1525,6 +1516,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\rope_helpers.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
