--- a/msvc/hl2/game_client_hl1/game_client_hl1.vcxproj
+++ b/msvc/hl2/game_client_hl1/game_client_hl1.vcxproj
@@ -462,8 +462,6 @@
     <ClCompile Include="..\..\..\game\shared\predicted_viewmodel.cpp" />
     <ClCompile Include="..\..\..\game\shared\predictioncopy.cpp" />
     <ClCompile Include="..\..\..\game\shared\props_shared.cpp" />
-    <ClCompile Include="..\..\..\game\shared\rope_helpers.cpp" />
-    <ClCompile Include="..\..\..\game\shared\saverestore.cpp" />
     <ClCompile Include="..\..\..\game\shared\sceneentity_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\sequence_Transitioner.cpp" />
     <ClCompile Include="..\..\..\game\shared\sheetsimulator.cpp" />
@@ -505,6 +503,7 @@
     <ClCompile Include="..\..\..\public\posedebugger.cpp" />
     <ClCompile Include="..\..\..\public\ragdoll_shared.cpp" />
     <ClCompile Include="..\..\..\public\renamed_recvtable_compat.cpp" />
+    <ClCompile Include="..\..\..\public\rope_helpers.cpp" />
     <ClCompile Include="..\..\..\public\rope_physics.cpp" />
     <ClCompile Include="..\..\..\public\scratchpad3d.cpp" />
     <ClCompile Include="..\..\..\public\ScratchPadUtils.cpp" />
