--- a/msvc/hl2/game_client_hl1mp/game_client_hl1mp.vcxproj.filters
+++ b/msvc/hl2/game_client_hl1mp/game_client_hl1mp.vcxproj.filters
@@ -1122,12 +1122,6 @@
     <ClCompile Include="..\..\..\game\shared\props_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\rope_helpers.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\saverestore.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\sceneentity_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1549,6 +1543,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\rope_helpers.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
