--- a/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
+++ b/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
@@ -789,15 +789,6 @@
     <ClCompile Include="..\..\..\game\server\rope.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\rope_helpers.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\saverestore.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\game\server\saverestore_gamedll.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\SceneCache.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1705,6 +1696,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\rope_helpers.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
