--- a/msvc/hl2/game_server_episodic/game_server_episodic.vcxproj
+++ b/msvc/hl2/game_server_episodic/game_server_episodic.vcxproj
@@ -531,8 +531,6 @@
     <ClCompile Include="..\..\..\game\shared\particlesystemquery.cpp" />
     <ClCompile Include="..\..\..\game\shared\particle_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\physics_main_shared.cpp" />
-    <ClCompile Include="..\..\..\game\shared\physics_saverestore.cpp" />
-    <ClCompile Include="..\..\..\game\shared\physics_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_posecontroller.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp" />
@@ -577,6 +575,8 @@
     <ClCompile Include="..\..\..\public\keyframe\keyframe.cpp" />
     <ClCompile Include="..\..\..\public\map_utils.cpp" />
     <ClCompile Include="..\..\..\public\networkvar.cpp" />
+    <ClCompile Include="..\..\..\public\physics_saverestore.cpp" />
+    <ClCompile Include="..\..\..\public\physics_shared.cpp" />
     <ClCompile Include="..\..\..\public\ragdoll_shared.cpp" />
     <ClCompile Include="..\..\..\public\registry.cpp" />
     <ClCompile Include="..\..\..\public\rope_helpers.cpp" />
