--- a/msvc/hl2/game_client_dod/game_client_dod.vcxproj
+++ b/msvc/hl2/game_client_dod/game_client_dod.vcxproj
@@ -527,8 +527,6 @@
     <ClCompile Include="..\..\..\game\shared\particle_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\particle_property.cpp" />
     <ClCompile Include="..\..\..\game\shared\physics_main_shared.cpp" />
-    <ClCompile Include="..\..\..\game\shared\physics_saverestore.cpp" />
-    <ClCompile Include="..\..\..\game\shared\physics_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\playerclass_info_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_posecontroller.cpp" />
@@ -577,6 +575,8 @@
     <ClCompile Include="..\..\..\public\interpolatortypes.cpp" />
     <ClCompile Include="..\..\..\public\jigglebones.cpp" />
     <ClCompile Include="..\..\..\public\networkvar.cpp" />
+    <ClCompile Include="..\..\..\public\physics_saverestore.cpp" />
+    <ClCompile Include="..\..\..\public\physics_shared.cpp" />
     <ClCompile Include="..\..\..\public\posedebugger.cpp" />
     <ClCompile Include="..\..\..\public\ragdoll_shared.cpp" />
     <ClCompile Include="..\..\..\public\renamed_recvtable_compat.cpp" />
