--- a/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj.filters
+++ b/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj.filters
@@ -1263,12 +1263,6 @@
     <ClCompile Include="..\..\..\game\shared\physics_main_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\physics_saverestore.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\physics_shared.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1735,6 +1729,12 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\rope_helpers.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\physics_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\physics_saverestore.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
