--- a/msvc/hl2/game_server_dod/game_server_dod.vcxproj
+++ b/msvc/hl2/game_server_dod/game_server_dod.vcxproj
@@ -456,8 +456,6 @@
     <ClCompile Include="..\..\..\game\shared\particlesystemquery.cpp" />
     <ClCompile Include="..\..\..\game\shared\particle_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\physics_main_shared.cpp" />
-    <ClCompile Include="..\..\..\game\shared\physics_saverestore.cpp" />
-    <ClCompile Include="..\..\..\game\shared\physics_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\playerclass_info_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_posecontroller.cpp" />
@@ -504,6 +502,8 @@
     <ClCompile Include="..\..\..\public\keyframe\keyframe.cpp" />
     <ClCompile Include="..\..\..\public\map_utils.cpp" />
     <ClCompile Include="..\..\..\public\networkvar.cpp" />
+    <ClCompile Include="..\..\..\public\physics_saverestore.cpp" />
+    <ClCompile Include="..\..\..\public\physics_shared.cpp" />
     <ClCompile Include="..\..\..\public\ragdoll_shared.cpp" />
     <ClCompile Include="..\..\..\public\registry.cpp" />
     <ClCompile Include="..\..\..\public\rope_helpers.cpp" />
