--- a/msvc/hl2/game_server_dod/game_server_dod.vcxproj.filters
+++ b/msvc/hl2/game_server_dod/game_server_dod.vcxproj.filters
@@ -921,12 +921,6 @@
     <ClCompile Include="..\..\..\game\shared\physics_main_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\physics_saverestore.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\physics_shared.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1528,6 +1522,12 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\rope_helpers.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\physics_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\physics_saverestore.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
