--- a/msvc/hl2/game_server_hl2mp/game_server_hl2mp.vcxproj.filters
+++ b/msvc/hl2/game_server_hl2mp/game_server_hl2mp.vcxproj.filters
@@ -759,12 +759,6 @@
     <ClCompile Include="..\..\..\game\server\physics_prop_ragdoll.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\physics_saverestore.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\physics_shared.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\server\physobj.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1729,6 +1723,12 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\public\rope_helpers.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\physics_shared.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\physics_saverestore.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
