--- a/msvc/hl2/game_client_portal/game_client_portal.vcxproj
+++ b/msvc/hl2/game_client_portal/game_client_portal.vcxproj
@@ -339,6 +339,8 @@
     <ClCompile Include="..\..\..\game\client\physpropclientside.cpp" />
     <ClCompile Include="..\..\..\game\client\playerandobjectenumerator.cpp" />
     <ClCompile Include="..\..\..\game\client\playerspawncache.cpp" />
+    <ClCompile Include="..\..\..\game\client\PortalRender.cpp" />
+    <ClCompile Include="..\..\..\game\client\portalrenderable_flatbasic.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\clientmode_portal.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\c_env_lightraill_endpoint.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\c_env_portal_path_track.cpp" />
@@ -359,14 +361,12 @@
     <ClCompile Include="..\..\..\game\client\portal\hud_quickinfo.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\materialproxy_portalstatic.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\MaterialProxy_Portal_PickAlphaMask.cpp" />
-    <ClCompile Include="..\..\..\game\client\portal\PortalRender.cpp" />
-    <ClCompile Include="..\..\..\game\client\portal\portalrenderable_flatbasic.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\portal_credits.cpp" />
-    <ClCompile Include="..\..\..\game\client\portal\Portal_DynamicMeshRenderingUtils.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\portal_hud_crosshair.cpp" />
-    <ClCompile Include="..\..\..\game\client\portal\portal_render_targets.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\vgui_neurotoxin_countdown_screen.cpp" />
     <ClCompile Include="..\..\..\game\client\portal\vgui_portal_stats_display_screen.cpp" />
+    <ClCompile Include="..\..\..\game\client\Portal_DynamicMeshRenderingUtils.cpp" />
+    <ClCompile Include="..\..\..\game\client\portal_render_targets.cpp" />
     <ClCompile Include="..\..\..\game\client\prediction.cpp" />
     <ClCompile Include="..\..\..\game\client\proxyentity.cpp" />
     <ClCompile Include="..\..\..\game\client\ProxyHealth.cpp" />
@@ -501,14 +501,13 @@
     <ClCompile Include="..\..\..\game\shared\physics_main_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_posecontroller.cpp" />
+    <ClCompile Include="..\..\..\game\shared\PortalSimulation.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\achievements_portal.cpp" />
-    <ClCompile Include="..\..\..\game\shared\portal\PortalSimulation.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_collideable_enumerator.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_gamemovement.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_gamerules.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_playeranimstate.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_player_shared.cpp" />
-    <ClCompile Include="..\..\..\game\shared\portal\portal_shareddefs.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_usermessages.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_weapon_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\prop_portal_shared.cpp" />
@@ -516,6 +515,7 @@
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalbase.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalbasecombatweapon.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalgun_shared.cpp" />
+    <ClCompile Include="..\..\..\game\shared\portal_shareddefs.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\precache_register.cpp" />
     <ClCompile Include="..\..\..\game\shared\predictableid.cpp" />
