--- a/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj.filters
+++ b/msvc/hl2/game_server_cstrike/game_server_cstrike.vcxproj.filters
@@ -1737,6 +1737,12 @@
     <ClCompile Include="..\..\..\public\gamerules.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\portal_shareddefs.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\PortalSimulation.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\public\server_class.h">
