--- a/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
+++ b/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
@@ -1701,5 +1701,11 @@
     <ClCompile Include="..\..\..\public\gamerules.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\portal_shareddefs.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\game\shared\PortalSimulation.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
