--- a/msvc/hl2/game_server_portal/game_server_portal.vcxproj
+++ b/msvc/hl2/game_server_portal/game_server_portal.vcxproj
@@ -552,14 +552,13 @@
     <ClCompile Include="..\..\..\game\shared\physics_main_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_bonusmaps_accessor.cpp" />
     <ClCompile Include="..\..\..\game\shared\point_posecontroller.cpp" />
+    <ClCompile Include="..\..\..\game\shared\PortalSimulation.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\achievements_portal.cpp" />
-    <ClCompile Include="..\..\..\game\shared\portal\PortalSimulation.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_collideable_enumerator.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_gamemovement.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_gamerules.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_playeranimstate.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_player_shared.cpp" />
-    <ClCompile Include="..\..\..\game\shared\portal\portal_shareddefs.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_usermessages.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\portal_weapon_parse.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\prop_portal_shared.cpp" />
@@ -567,6 +566,7 @@
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalbase.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalbasecombatweapon.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal\weapon_portalgun_shared.cpp" />
+    <ClCompile Include="..\..\..\game\shared\portal_shareddefs.cpp" />
     <ClCompile Include="..\..\..\game\shared\portal_util_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\precache_register.cpp" />
     <ClCompile Include="..\..\..\game\shared\predictableid.cpp" />
