--- a/msvc/hl2/game_server_dod/game_server_dod.vcxproj.filters
+++ b/msvc/hl2/game_server_dod/game_server_dod.vcxproj.filters
@@ -942,9 +942,6 @@
     <ClCompile Include="..\..\..\game\shared\sceneentity_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\sequence_Transitioner.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\sheetsimulator.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1534,6 +1531,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\PortalSimulation.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\sequence_Transitioner.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
