--- a/msvc/hl2/game_client_hl1mp/game_client_hl1mp.vcxproj.filters
+++ b/msvc/hl2/game_client_hl1mp/game_client_hl1mp.vcxproj.filters
@@ -1110,9 +1110,6 @@
     <ClCompile Include="..\..\..\game\shared\sceneentity_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\sequence_Transitioner.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\sheetsimulator.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1558,6 +1555,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\portal_shareddefs.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\sequence_Transitioner.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
