--- a/msvc/hl2/game_server_episodic/game_server_episodic.vcxproj.filters
+++ b/msvc/hl2/game_server_episodic/game_server_episodic.vcxproj.filters
@@ -1380,9 +1380,6 @@
     <ClCompile Include="..\..\..\game\shared\sceneentity_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\sequence_Transitioner.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\sheetsimulator.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1747,6 +1744,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\PortalSimulation.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\sequence_Transitioner.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
