--- a/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
+++ b/msvc/hl2/game_server_hl2/game_server_hl2.vcxproj.filters
@@ -801,9 +801,6 @@
     <ClCompile Include="..\..\..\game\server\sendproxy.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\sequence_Transitioner.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\server\serverbenchmark_base.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1705,6 +1702,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\PortalSimulation.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\sequence_Transitioner.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
