--- a/msvc/hl2/game_server_portal/game_server_portal.vcxproj
+++ b/msvc/hl2/game_server_portal/game_server_portal.vcxproj
@@ -575,7 +575,6 @@
     <ClCompile Include="..\..\..\game\shared\SceneCache.cpp" />
     <ClCompile Include="..\..\..\game\shared\sceneentity_shared.cpp" />
     <ClCompile Include="..\..\..\game\shared\script_intro_shared.cpp" />
-    <ClCompile Include="..\..\..\game\shared\sequence_Transitioner.cpp" />
     <ClCompile Include="..\..\..\game\shared\sheetsimulator.cpp" />
     <ClCompile Include="..\..\..\game\shared\simtimer.cpp" />
     <ClCompile Include="..\..\..\game\shared\singleplay_gamerules.cpp" />
@@ -617,6 +616,7 @@
     <ClCompile Include="..\..\..\public\rope_physics.cpp" />
     <ClCompile Include="..\..\..\public\scratchpad3d.cpp" />
     <ClCompile Include="..\..\..\public\ScratchPadUtils.cpp" />
+    <ClCompile Include="..\..\..\public\sequence_Transitioner.cpp" />
     <ClCompile Include="..\..\..\public\server_class.cpp" />
     <ClCompile Include="..\..\..\public\simple_physics.cpp" />
     <ClCompile Include="..\..\..\public\SoundParametersInternal.cpp" />
