--- a/msvc/hl2/game_server_portal/game_server_portal.vcxproj.filters
+++ b/msvc/hl2/game_server_portal/game_server_portal.vcxproj.filters
@@ -1368,9 +1368,6 @@
     <ClCompile Include="..\..\..\game\shared\sceneentity_shared.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\game\shared\sequence_Transitioner.cpp">
-      <Filter>源文件\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\game\shared\sheetsimulator.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
@@ -1846,6 +1843,9 @@
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\game\shared\PortalSimulation.cpp">
+      <Filter>源文件\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\public\sequence_Transitioner.cpp">
       <Filter>源文件\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
